<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/onboarding_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context="com.xereon.xereon.ui.onboarding.OnboardingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/first_steps"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboarding_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/roboto"
        android:text="@string/first_steps_description"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboarding_show"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/discover_new_products"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/img_shopping_app"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/onboarding_login_btn"
        app:layout_constraintTop_toBottomOf="@id/onboarding_info_txt" />

    <Button
        android:id="@+id/onboarding_login_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="56dp"
        android:textAllCaps="false"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_skip"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <TextView
        android:id="@+id/onboarding_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:padding="6dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@id/onboarding_login_btn"
        app:layout_constraintTop_toBottomOf="@id/onboarding_login_btn" />

    <TextView
        android:id="@+id/onboarding_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/skip"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:drawablePadding="12dp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>