<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/first_steps"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/first_steps_description"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/choose_show"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/discover_new_products"
        android:maxHeight="130dp"
        android:src="@drawable/img_shopping_app"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/choose_show_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_info_txt" />

    <TextView
        android:id="@+id/choose_show_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/discover_new_products"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/choose_login_btn"
        app:layout_constraintTop_toBottomOf="@id/choose_show" />

    <Button
        android:id="@+id/choose_login_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="56dp"
        android:textAllCaps="false"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/choose_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="330dp" />

    <TextView
        android:id="@+id/choose_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:padding="5dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@id/choose_login_btn"
        app:layout_constraintTop_toBottomOf="@id/choose_login_btn" />

    <TextView
        android:id="@+id/choose_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/skip"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:drawablePadding="12dp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>