<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_to_xereon"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/salutation"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/signup_gender_input"
        app:layout_constraintBottom_toTopOf="@id/signup_gender_input"/>

    <RadioGroup
        android:id="@+id/signup_gender_input"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/signup_gender_male"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/signup_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_info_txt"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="350dp">

        <RadioButton
            android:id="@+id/signup_gender_male"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/gender_male"/>

        <RadioButton
            android:id="@+id/signup_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:text="@string/gender_female"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_name_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/name"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="3dp"
        app:layout_constraintBottom_toTopOf="@id/signup_email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_gender_input"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="350dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_address"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="3dp"
        app:layout_constraintBottom_toTopOf="@id/signup_password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_name_input"
        app:layout_constraintWidth_max="350dp"
        app:startIconDrawable="@drawable/ic_email">

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="3dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email_input"
        app:layout_constraintWidth_max="350dp"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="56dp"
        android:textAllCaps="false"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="330dp" />

    <ProgressBar
        android:id="@+id/signup_loading"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminateTint="@color/white"
        android:layout_marginStart="16dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="@id/signup_btn"
        app:layout_constraintBottom_toBottomOf="@id/signup_btn"
        app:layout_constraintStart_toStartOf="@id/signup_btn"/>

    <TextView
        android:id="@+id/signup_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:text="@string/already_account"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/signup_btn"
        app:layout_constraintTop_toBottomOf="@id/signup_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>