<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/onboarding_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context="com.xereon.xereon.ui.onboarding.OnboardingRegisterFragment">

    <ImageView
        android:id="@+id/onboarding_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboarding_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_to_xereon"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/salutation"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/onboarding_gender_input"
        app:layout_constraintBottom_toTopOf="@id/onboarding_gender_input"/>

    <RadioGroup
        android:id="@+id/onboarding_gender_input"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/gender_male"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/onboarding_name_input"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/onboarding_info_txt"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/gender_male"/>

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:text="@string/gender_female"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/onboarding_name_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="3dp"
        app:layout_constraintBottom_toTopOf="@id/onboarding_email_input"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/onboarding_gender_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/onboarding_email_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="3dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/onboarding_password_input"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/onboarding_name_input"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/onboarding_password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="3dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/onboarding_register_btn"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/onboarding_email_input"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/onboarding_register_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="56dp"
        android:textAllCaps="false"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <ProgressBar
        android:id="@+id/onboarding_loading"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:visibility="gone"
        android:indeterminateTint="@color/white"
        android:layout_marginStart="16dp"
        android:elevation="10dp"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/onboarding_register_btn"
        app:layout_constraintBottom_toBottomOf="@id/onboarding_register_btn"
        app:layout_constraintStart_toStartOf="@id/onboarding_register_btn"/>

    <TextView
        android:id="@+id/onboarding_choose_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:text="@string/already_account"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/onboarding_register_btn"
        app:layout_constraintTop_toBottomOf="@id/onboarding_register_btn" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>